--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "1.0.0",
     "description": "Microservice for fetching and processing music via yt-dlp for FreeTune",
     "main": "src/index.js",
+    "type": "module",
     "scripts": {
         "start": "node src/index.js",
         "dev": "nodemon src/index.js",
