--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "scripts": {
         "start": "node src/index.js",
         "dev": "nodemon src/index.js",
+        "update-ytdlp": "node src/scripts/update-ytdlp.js",
         "test": "jest"
     },
     "dependencies": {
